<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llFundoLista"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvListaOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextTvListaCodigoCupom"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextTvListaValorDesconto"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvListaPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextTvListaDataValidade"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>