<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".Menu">

    <Button
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="400px"
        android:text="@string/txtMenuButtonCart"
        android:textStyle="bold"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProdutos"
        app:layout_constraintVertical_bias="0.723" />

    <Button
        android:id="@+id/btnCloseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:width="400px"
        android:text="@string/txtMenuButtonClose"
        android:textStyle="bold"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="400px"
        android:text="@string/txtMenuButtonOrders"
        android:textStyle="bold"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProdutos"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/btnProdutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:width="400px"
        android:backgroundTint="@color/buttons"
        android:text="@string/txtMenuButtonProducts"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="235dp"
        android:layout_height="149dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/farmacia_now_logotipo" />

</androidx.constraintlayout.widget.ConstraintLayout>